<resources>
    <string name="app_name">phase-3</string>
    <string name="title_activity_login">loginActivity</string>

    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="log_in_button_label">Log In</string>

    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>

    <string name="icon_chat">Chat</string>
    <string name="icon_profile">Profile</string>
    <string name="icon_home">Home</string>


    <string name="top">First Five Queries </string>

    <string name="top_query">Queries 1 to 5</string>
    <string name="first_query">The post that has the most number of likes.</string>
    <string name="second_query">Who has the most twitter followers?</string>
    <string name="third_query">Count the number that contains the keyword "flu"?</string>
    <string name="four_query">Find all the posts made by one person</string>
    <string name="five_query">Who twits the most in a year?</string>
</resources>
